Tidy up guide for gh-pages push

--- a/libs/jade/brand-icons.jade
+++ b/libs/jade/brand-icons.jade
@@ -16,8 +16,8 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Brand icons differ from advice icons, they are used illustrate information from and about the Citizens Advice organisation.
-			p They should be used sparingly to maintain importance but are there to support the information and make it easier to identify and attribute.
+			p Brand icons differ from the website content icons, they are used illustrate information from and about the Citizens Advice organisation.
+			p They should be used sparingly to maintain importance but are there to support the information.
 
 			.example-box-plain
 				label(style="margin-bottom:1rem;") Icon examples
