--- a/libs/jade/cards.jade
+++ b/libs/jade/cards.jade
@@ -40,7 +40,7 @@ block content
 					| &lt;/div&gt;
 
 
-			.example-box-plain
+			//.example-box-plain
 				label Landscape card
 				.cards
 					.row(style="margin:0;")
@@ -52,7 +52,7 @@ block content
 						.span6
 							.card-text-left
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-			pre
+			//pre
 				code.language-html
 					| &lt;div class="cards"&gt;
 					| 	&lt;div class="row"&gt;
