--- a/libs/jade/field-groups.jade
+++ b/libs/jade/field-groups.jade
@@ -130,7 +130,7 @@ block content
 					| &lt;/fieldset&gt;
 
 			h2 Date field
-			p With date fields it's important that the question and field tyoe is repeated in the first label, using the #[span.code screenreader] class.
+			p With date fields it's important that the question and field type is repeated in the first label, using the #[span.code screenreader] class.
 			.example-box-plain
 				.form-group-date
 					legend When did you buy your car?
