--- a/libs/jade/section-notice.jade
+++ b/libs/jade/section-notice.jade
@@ -33,6 +33,8 @@ block content
 		div
 			p Section notices appear between the breadcrumbs and page content.
 
+			p This section is under review, #[a(href="./section-notice-dev.html") this is the updated pattern being researched].
+
 			.example-box-plain
 				aside.section-notice
 					h2.screenreader Notice
