--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -16,7 +16,7 @@ block sidebar
 block content
 	.articleContent
 		div
-			p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
+			p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans-serif font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
 			p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
 			p(style="font-weight: 400;") Open Sans 400
 				span.code @font-weight-base
@@ -37,7 +37,7 @@ block content
 				span.code @font-size-h4
 			h5 h5
 				span.code @font-size-h5
-			p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+			p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all.
 				span.code @u-lede
 			p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 			h2 Sub header, for introducing content sections
