--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -16,32 +16,32 @@ block sidebar
 block content
 	.articleContent
 		div
-			p.p-lede Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.
+			p Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.
 			p It is important to ask:
 			ul
-				li is the callout neccessary, too many, misused or unneccessary callouts weaken their value
+				li is the callout neccessary, too many, misused or unneccessary callouts weaken their value and can distract from other important content around it
 				li which style of callout is relevant, is the information 'useful', 'important' or 'recommending'
-			p Colours can't be relied upon as the only method of communicating the importance and content of a callout. Any callouts should be clearly titled using #[code h2] or #[code h3] tags. Use the appropriate Aria tags for the relevant callouts to ensure screenreaders understand the information contained.
+			p Colours can't be relied upon as the only method of communicating the importance and content of a callout. Any callouts should be clearly titled using #[code.code h2] or #[code.code h3] tags. Use the appropriate Aria tags for the relevant callouts to ensure screenreaders understand the information contained.
 			h2 Callout styles
 
 			.example-box-plain
 				.callout
 					h3 Callout unstyled
 					p This callout does not require an Aria tag but should be labeled with a clear heading.
-					p This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.
+					p This style is used for any neutral callouts or particularly common help tips, where the information needs to be seperated from the content.
 					//a.callout__link Callout link
 			pre
 				code.language-html
 					| &lt;div class="callout"&gt;
 					| 	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
 					| 	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
-					| 	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+					| 	&lt;p&gt;This style is used for any neutral callouts or particularly common help tips, where the information needs to be seperated from the content.&lt;/p&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--warning
 					h3 Callout warning
-					p Use the Aria tag #[code aria-label="Important"].
+					p Use the Aria tag #[code.code aria-label="Important"].
 					p The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.
 					//a.callout__link Callout link
 			pre
@@ -55,12 +55,12 @@ block content
 			.example-box-plain
 				.callout--alert
 					h3 Callout alert
-					p Use the Aria tag #[code aria-label="Help"].
+					p Use the Aria tag #[code.code aria-label="Help"].
 					p This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.
 					//a.callout__link Callout link
 				.callout--alert--icon
 					h3 Callout alert with icon
-					p The icon is optional and can be including by adding the #[code .callout--icon] class.de aria-label="Help"].
+					p The icon is optional and can be including by adding the #[code.code .callout--icon] class. For accessibility purposes use aria-label="Help"].
 			pre
 				code.language-html
 					| &lt;div class="callout--alert"&gt;
@@ -79,13 +79,13 @@ block content
 					p This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'
 				.callout--confirmation--icon
 					h3 Callout confirmation with icon
-					p The icon is optional and can be including by adding the #[code .callout--icon] class.
+					p The icon is optional and can be including by adding the #[code.code .callout--icon] class.
 					//a.callout__link Callout link
 			pre
 				code.language-html
 					| &lt;div class="callout--confirmation"&gt;
 					| 	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
-					| 	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
+					| 	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the information i.e. 'Do apply for this if…'&lt;/p&gt;
 					| &lt;/div&gt;
 					| &lt;div class="callout--confirmation--icon"&gt;
 					| 	&lt;h3&gt;Callout confirmation with icon&lt;/h3&gt;
