--- a/libs/jade/collapse.jade
+++ b/libs/jade/collapse.jade
@@ -16,9 +16,11 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Collapsible sections allow you to hide content that isn’t applicable to most people on the page, but will still be important to some. This is a great way of making the page more succinct and easier to scan. A good example of usage is when you have a selection of content headings, where the user will only want some depending on their situation.
+			p Collapsible sections allow you to hide content that isn’t applicable to most people visiting the page, but will still be relevant to some. This is a great way of making the page more succinct and easier to scan.
 
-			p Keep in mind collapsed content can also be very easy for users to miss, so they should be used sparingly or only with a good reason.
+			p Keep in mind when creating content that the content of callopsibles will most likely not be indexed in search engines, however the 'Toggle title' will be, so this is very important to be clear and descriptive. You also shouldn't use more than 4 accordions per page.
+
+			p Keep in mind hidden content can also be easy for users to miss, so they should be used sparingly or only with a good reason.
 			.example-box-plain
 				.collapse.collapsible
 					.collapse-toggle Unstyled content inside header/toggle
@@ -60,6 +62,7 @@ block content
 					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
+		//
 			h2 Existing syntax
 			.example-box-plain
 				section.revealable
