Added vertical dots to icon page

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1701,9 +1701,9 @@ div.tooltip:before {
         }
     }
 
-    .i-zws {
+    .i-vertical-dots {
         .icon:before {
-            content: @i-zws;
+            content: @i-vertical-dots;
             .icon;
         }
         .variable,
