Fixed the tranform point on expandable table arrows

--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -300,6 +300,7 @@ table.simple-table td {
         }
         &.active td:first-of-type:before {
             transform: rotate(90deg);
+            transform-origin: center left;
         }
     }
     & > td {
