--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -18,7 +18,7 @@ mixin sidebar(obj, key)
 		ul
 			li.side-nav-beta__button In this section
 			li.side-nav-beta__heading.-active.-open
-				a
+				a(href="../")
 					span #{section}
 			li
 				ul
