Made sidebar header link to index anchor

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -12,13 +12,13 @@ block content
 
 		.newrow
 			.span12
-				h2#principles Digital principles
+				h2#Principles Digital principles
 				ul
 					li
 						a(href="principles.html") Digital principles
 		.newrow
 			.span4-sm
-				h2#styles Styles
+				h2#Styles Styles
 				ul
 					li
 						a(href="typography.html") Typography
@@ -43,7 +43,7 @@ block content
 								a(href="field-groups.html") Field groups
 
 			.span4-sm
-				h2#modules Modules
+				h2#Modules Modules
 				ul
 					//li
 					//	a(href="cards.html") Cards
@@ -75,7 +75,7 @@ block content
 							//li
 								a(href="reference.html") Reference tool
 			.span4-sm
-				h2#templates Templates
+				h2#Templates Templates
 				ul
 					li
 						a(href="content.html") Content example
@@ -100,7 +100,7 @@ block content
 					//li
 					//	a(href="pip-cooking.html") PIP preparing and cooking food question
 
-				h2#brand Branding
+				h2#Brand Branding
 				ul
 					li
 						a(href="cards.html") Cards
