Add initial design of blog homepage

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1010,7 +1010,7 @@ div.tooltip:before {
             img {
                 width: 220px;
                 padding: @box-spacing-vertical*1.5 @box-spacing-horizontal;
-                display: block;
+                display: inline-block;
             }
         }
         .mockup &--content img {
