Initial add, column post layout

--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -40,6 +40,31 @@ block content
 
 				a(href="#" style="border-bottom:none;")
 					button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+			//.row
+				.span6
+					h2 #[a(href="#") Introducing… immigration advice]
+				
+					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
+	
+					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+
+					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+
+					a(href="#" style="border-bottom:none;")
+						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+
+				.span6
+					h2 #[a(href="#") Introducing… immigration advice]
+				
+					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
+	
+					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+
+					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+
+					a(href="#" style="border-bottom:none;")
+						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+
 
 			.pagination
 				ul
