Additional style to column blog excerpts

--- a/libs/blog.less
+++ b/libs/blog.less
@@ -36,3 +36,16 @@
     }
     }
 }
+.blog-column-excerpt {
+    padding: 0 1em;
+    border-left: 1px solid #eee;
+    h2 {
+        margin-top: 0;
+        a {
+            margin-top: 0;
+            color: #004b88;
+            text-decoration: none;
+            border-bottom: none;
+        }
+    }
+}
