--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -40,8 +40,8 @@ block content
 
 				a(href="#" style="border-bottom:none;")
 					button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
-			//.row
-				.span6
+			.row
+				.span6.blog-column-excerpt
 					h2 #[a(href="#") Introducing… immigration advice]
 				
 					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
@@ -53,7 +53,7 @@ block content
 					a(href="#" style="border-bottom:none;")
 						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
 
-				.span6
+				.span6.blog-column-excerpt
 					h2 #[a(href="#") Introducing… immigration advice]
 				
 					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
