--- a/libs/blog.less
+++ b/libs/blog.less
@@ -3,49 +3,77 @@
  */
 
  .title__subheading--blog {
-    margin-bottom: 2rem;
-    margin-top: .8rem;
-    padding: .35rem 0;
-    padding: 0 0 1rem 0;
-    border-top: #EEEEEE 1px solid;
-    //border-bottom: #EEEEEE 1px solid;
-    font-size: 0.875rem;
-    line-height: 1.7rem;
-    color: #606060;
-    h2 a {
-        color: #004b88;
-        text-decoration: none;
-        border-bottom: none;
-    }
+	margin-bottom: 2rem;
+	margin-top: .8rem;
+	padding: .35rem 0;
+	padding: 0 0 1rem 0;
+	border-top: #EEEEEE 1px solid;
+	//border-bottom: #EEEEEE 1px solid;
+	font-size: 0.875rem;
+	line-height: 1.7rem;
+	color: #606060;
+	h2 a {
+		color: #004b88;
+		text-decoration: none;
+		border-bottom: none;
+	}
  }
  .styleguide--header--content-nav {
-    float: right;
-    text-align: right;
-    width: 500px;
-    padding: 1.5rem 1rem;
-    display: inline-block;
-    a {
-    padding: 1rem;
-    text-decoration: none;
-    border-bottom: none;
-    font-weight: 600;
-    color: white;
-    &:hover {
-        color: #A2D5FF;
-        border-bottom: none;
-    }
-    }
+	float: right;
+	text-align: right;
+	width: 500px;
+	padding: 1.5rem 1rem;
+	display: inline-block;
+	a {
+	padding: 1rem;
+	text-decoration: none;
+	border-bottom: none;
+	font-weight: 600;
+	color: white;
+	&:hover {
+		color: #A2D5FF;
+		border-bottom: none;
+	}
+	}
 }
 .blog-column-excerpt {
-    padding: 0 1em;
-    border-left: 1px solid #eee;
-    h2 {
-        margin-top: 0;
-        a {
-            margin-top: 0;
-            color: #004b88;
-            text-decoration: none;
-            border-bottom: none;
-        }
-    }
+	padding: 0 1em;
+	border-left: 1px solid #eee;
+	margin-left: .5rem;
+	h2 {
+		margin-top: 0;
+		a {
+			margin-top: 0;
+			color: #004b88;
+			text-decoration: none;
+			border-bottom: none;
+		}
+	}
+}
+.blog-panel-intro {
+	max-width: 1040px;
+	margin: auto;
+	clear: left;
+	margin-top: 2rem;
+	margin-bottom: 1.5rem;
+	position: relative;
+	z-index: 2;
+	background-color: #fee4c3;
+	padding: 2em 11em 2em 2em;
+	overflow: hidden;
+	h1 {
+		margin-top: 0;
+	}
+	&:after {
+		content: "\e606";
+		font-family: 'cab-icons';
+		font-size: 20rem;
+		color: #004b88;
+		position: absolute;
+		top: 10%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		right:-15%;
+	}
 }
