--- a/libs/blog.less
+++ b/libs/blog.less
@@ -17,7 +17,19 @@
 		text-decoration: none;
 		border-bottom: none;
 	}
- }
+	&:before {
+		font-family: 'open_sans', 'brand';
+		font-size: .85rem;
+		font-weight: 700;
+		content: "\e939\00a0\00a0 Research";
+		line-height: 1em;
+		margin: 0;
+		display: inline-block;
+		padding: .5rem;
+		color: #57486b;
+		background-color: #c2bdde;
+	}
+}
  .styleguide--header--content-nav {
 	float: right;
 	text-align: right;
