Amend header and icon for home

--- a/libs/jade/blog-home.jade
+++ b/libs/jade/blog-home.jade
@@ -18,7 +18,7 @@ block breadcrumbs
 				p No 2 local Citizens Advice are the same. They don’t represent the same people, they have different funding and they are different sizes. That’s why we’ve been working really hard to get the whole network signed up and involved in the digital project.
 
 				a(href="#" style="border-bottom:none;")
-					button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+					button.btn.btn-secondary.right-button-icon(type="button") Read full article
 
 block sidebar
 	include ../template/sidebar-blog.jade
