Initial add post page

--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -42,7 +42,7 @@
                 .search-results__field(style="width:95%; margin-bottom: 10px;")
                     input(type="email", placeholder="email", value="Name")
                 label(for="email") Your email
-                .search-results__field(style="width:95%;")
+                .search-results__field(style="width:95%; margin-bottom: 10px;")
                     input(type="email", placeholder="email", value="Email")
                     button.btn.btn-primary.right-button-icon Submit
 
