Changed sidebar class and removed bubble icon

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -241,7 +241,7 @@
 @i-minus: 					"\f068";
 @i-exclamation-circle: 		"\f06a";
 @i-exclamation-triangle: 	"\f071";
-@i-bubble: 					"\e606";
+//@i-bubble: 					"\e606";
 @i-up: 						"\e609";
 @i-down: 					"\e612";
 @i-external-link:			"\f08e";
