--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -20,7 +20,8 @@
 	}
 }
 
-.side-nav-beta {
+.side-nav-beta,
+.section-nav {
 	.main-content__sidebar;
 	margin: 0 0 @box-spacing 0;
 	overflow: visible;
