--- a/libs/base/global.less
+++ b/libs/base/global.less
@@ -5,6 +5,8 @@
 // TODO - I'm thinking we actaully apply this selectivly rather than globally
 *, *:before, *:after {-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;}
 
+[tabindex="-1"] { outline: none; }
+
 body, input, button, select, textarea {
     font: @base-size/1.5 'open_sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
