--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -15,22 +15,20 @@ mixin breadcrumbs(obj)
 
 mixin sidebar(obj, key)
 	nav.section-nav
+		h2.section-nav__heading In this section
 		ul
-			li.section-nav__button In this section
-			li.section-nav__heading.-active.-open
-				a(href="../##{section}")
-					span #{section}
 			li
+				a.section-nav__parent(href="../##{section}") #{section}
 				ul
 					- each item,index in obj
 						- active = index === key ? "-current": ""
-						li.section-nav__sibling
+						li
 							+link(item.title, item.href, item.text)(class=active)
 
 mixin sidebarSiblings(obj, key)
 	nav.section-nav.sibling
 		ul
-			li.section-nav__heading.-active.-open
+			li.section-nav__heading
 				a
 					span #{section}
 			li
