main-nav white underline issue fixed

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -10,7 +10,7 @@
 
 // Fix the height or it jumps around alot as the JS resizes it.  Do it now in CSS to avoid jumping when the js loads. The overflow is removed by the JS or the menus won't show
 .js .main-nav {
-    height: 54px;
+    //height: 54px;
     overflow: hidden;
 }
 
