Update extent switcher popup

--- a/libs/site.less
+++ b/libs/site.less
@@ -32,7 +32,6 @@
 //@import "mixins/spacing";
 
 /* Module files */
-@import "modules/extent-switcher-modal";
 @import "modules/header";
 @import "modules/title";
 @import "modules/main-content";
@@ -48,7 +47,7 @@
 @import "modules/navigation";
 @import "modules/section-notice";
 @import "modules/decision-tree";
-@import "modules/extent-switcher";
+@import "modules/extent-picker";
 @import "modules/revealable";
 //@import "modules/staff";
 @import "modules/status";
