Extent switcher h2 size

--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -40,7 +40,7 @@
   padding: @box-spacing-horizontal*1.5;
   margin-top: @box-spacing*.5;
   h2 {
-    font-size: @font-size-base;
+    font-size: @font-size-h3;
     margin-top: -(@line-height-computed * 0.25);
   }
 }
