--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -36,6 +36,13 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    li {
+        display: inline-block;
+        padding-right: .5rem;
+        a {
+            margin: 0;
+        }
+    }
 }
 
 @media (max-width: @screen-xs-max) {
