Fixes for having 'in this section' as a link

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -85,6 +85,9 @@
 		color: @heritage-blue;
 		font-weight: @font-weight-bold;
 		background-color: @gray-8;
+		a {
+			border-bottom: 0;
+		}
     }
 
     @media screen and (max-width: @screen-xs-max) {
