Fixed active styling on sidebar

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -36,14 +36,17 @@
 			cursor: pointer;
 		}
 	}
-	.-visited {
-		font-weight: @font-weight-bolder;
+
+	a.active {
+		background-color: @heritage-blue-lightest;
 	}
+
 	ul {
 		list-style: none;
 		padding: 0;
 		margin: 0;
 	}
+
 	li {
 		padding: 0;
 		margin: 0;
@@ -85,6 +88,7 @@
 		color: @heritage-blue;
 		font-weight: @font-weight-bold;
 		background-color: @gray-8;
+		cursor: pointer;
 		a {
 			border-bottom: 0;
 		}
