--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -41,6 +41,10 @@
 		background-color: @heritage-blue-lightest;
 	}
 
+	li ul a:not([href]) {
+		background-color: @heritage-blue-lightest;
+	}
+
 	ul {
 		list-style: none;
 		padding: 0;
@@ -171,10 +175,6 @@
 		a {
 			text-decoration: none;
 			padding: 0;
-		}
-
-		a:not([href]) {
-		    background-color: @heritage-blue-lightest;
 		}
 
 		&.-current {
