--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -85,16 +85,24 @@
 	// Styles for collapsible sidebar on mobile
     &__heading {
     	display: none;
-		padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
-		font-size: @font-size-h3;
-		margin: 0;
-		border-bottom: none;
-		color: @heritage-blue;
-		font-weight: @font-weight-bold;
-		background-color: @gray-8;
-		cursor: pointer;
+    	padding: 0;
+    	margin: 0;
+        cursor: pointer;
 		a {
+			display: block;
+			padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
+			font-size: @font-size-h4;
+			margin: 0;
+			border-bottom: none;
+			color: @heritage-blue;
+			font-weight: @font-weight-bold;
+			background-color: @gray-8;
+			cursor: pointer;
 			border-bottom: 0;
+            .btn-icon(@i-vertical-dots,@color:@heritage-blue);
+            .expanded & {
+                .btn-icon(@i-cross,@color:@heritage-blue);
+            }
 		}
     }
 
@@ -119,11 +127,6 @@
 
     &__heading {
         @media screen and (max-width: @screen-xs-max) {
-            .btn-icon(@i-vertical-dots,@color:@heritage-blue);
-            cursor: pointer;
-            .expanded& {
-                .btn-icon(@i-cross,@color:@heritage-blue);
-            }
         }
     }
 }
