--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -40,14 +40,28 @@
     border: none;
     float: left;
     margin-top: .7em; // Slightly better centering
-    max-width: 24%; // For old IE
-    max-width: calc(250px); // For modern browsers
+    //display: inline-block;
     &:hover {
         border: none;
     }
 
+    img {
+        max-width: 24%; // For old IE
+        max-width: calc(250px); // For modern browsers
+    }
+
     @media ( max-width: @screen-xs-max ) {
-        display: none;
+        display: block;
+        background-color: @heritage-blue;
+        margin: 0;
+        width: 100%;
+        padding: 1rem;
+        img {
+            display: none;
+        }
+        img.main-header__img--mobile {
+            display: block;
+        }
     }
 
     &.wide {
