--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -52,18 +52,12 @@ html
 					button.btn.cookie-monster__close(data-action="close", type="button") Close
 
 		if mockup
-			//header.styleguide--header.mockup
-				.styleguide--header--content
-					a(href="index.html")
-						img(src="images/ca-logo-hz-white-280px.svg")
 			header.main-header
 				.main-header__content
-					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-280px.svg" height="80")
-					a.main-header__logo.no-print.wide(href="index.html", title="Citizens Advice home")
-						img(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-white-280px.svg")
-					a.main-header__logo.print-only(href="index.html", title="Citizens Advice home")
-						img(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-280px.svg")
+					a.main-header__logo(href="index.html", title="Citizens Advice home")
+						img(onerror="this.onerror=null;this.src='images/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="images/ca-logo_100px.svg" height="80")
+
+						img.main-header__img--mobile.no-print.wide(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-white-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
 						a.main-header__menu-link.js-toggle-menu(href="")
