Hidden brand callouts

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -170,49 +170,50 @@ block content
 					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Also &lt;a href="#"&gt; including a link to other content&lt;/a&gt;&lt;/p&gt;
 					| &lt;/div&gt;
 
-			h2 Brand callout styles
-			p Below are examples of callout styles utilising the brand colour palette.
-			p These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.
+			// unindent when uncommenting
+				h2 Brand callout styles
+				p Below are examples of callout styles utilising the brand colour palette.
+				p These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.
 
-			.example-box-plain
-				.callout--heritage
-					h3 Callout heritage
-					p Lorem ipsum.
-			pre
-				code.language-html
-					| &lt;div class="callout--heritage"&gt;
-					| 	&lt;h3&gt;Callout heritage&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| &lt;/div&gt;
+				.example-box-plain
+					.callout--heritage
+						h3 Callout heritage
+						p Lorem ipsum.
+				pre
+					code.language-html
+						| &lt;div class="callout--heritage"&gt;
+						| 	&lt;h3&gt;Callout heritage&lt;/h3&gt;
+						| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+						| &lt;/div&gt;
 
-			.example-box-plain
-				.callout--responsible
-					h3 Callout responsible
-					p Lorem ipsum.
-			pre
-				code.language-html
-					| &lt;div class="callout--responsible"&gt;
-					| 	&lt;h3&gt;Callout responsible&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| &lt;/div&gt;
+				.example-box-plain
+					.callout--responsible
+						h3 Callout responsible
+						p Lorem ipsum.
+				pre
+					code.language-html
+						| &lt;div class="callout--responsible"&gt;
+						| 	&lt;h3&gt;Callout responsible&lt;/h3&gt;
+						| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+						| &lt;/div&gt;
 
-			.example-box-plain
-				.callout--inventive
-					h3 Callout inventive
-					p Lorem ipsum.
-			pre
-				code.language-html
-					| &lt;div class="callout--inventive"&gt;
-					| 	&lt;h3&gt;Callout inventive&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-					| &lt;/div&gt;
+				.example-box-plain
+					.callout--inventive
+						h3 Callout inventive
+						p Lorem ipsum.
+				pre
+					code.language-html
+						| &lt;div class="callout--inventive"&gt;
+						| 	&lt;h3&gt;Callout inventive&lt;/h3&gt;
+						| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+						| &lt;/div&gt;
 
-			.example-box-plain
-				.callout--generous
-					h3 Callout generous
-					p Lorem ipsum.
-			pre
-				code.language-html
+				.example-box-plain
+					.callout--generous
+						h3 Callout generous
+						p Lorem ipsum.
+				pre
+					code.language-html
 					| &lt;div class="callout--generous"&gt;
 					| 	&lt;h3&gt;Callout generous&lt;/h3&gt;
 					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
