Changed the naming convention of section indexes to contents pages, and fixed the html syntax on our example page

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -84,7 +84,7 @@ block content
 					//li
 					//	a(href="advisor.html") Advisor content
 					li
-						a(href="section-index.html") Section index
+						a(href="contents-page.html") Contents pages
 					//li
 						a(href="section-index-dev.html") Section index development
 					//li
