--- a/libs/modules/contents-page.less
+++ b/libs/modules/contents-page.less
@@ -1,25 +1,28 @@
 /**
- * CONTENT INDEX PAGES
+ * CONTENTS PAGES
  */
 
+.contents-page,
 .beta-index-page {
     margin-bottom: @box-spacing*2;
+    padding-bottom: @box-spacing/2;
+
     h2 {
         margin-top: 0;
     }
 }
 
+.contents-page__section,
 .beta-index-page__box {
     border-bottom: 1px solid @gray-7;
     margin-bottom: @box-spacing;
-    float: left;
-
     &:last-child {
         margin-bottom: @box-spacing*2;
     }
 }
 
-.content__header {
+.content__header,
+.contents__header {
     background-color: @gray-7;
     h1 {
         margin: @box-spacing 0;
@@ -30,12 +33,8 @@
     }
 }
 
-/* Arrrrggggggg
-.section-notice + * .content__header {
-    margin-top: -@box-spacing;
-}*/
-
-.content__header__content {
+.content__header__content,
+.contents__header__content {
     .limit-width();
     padding: @box-spacing;
 
