--- a/libs/site.less
+++ b/libs/site.less
@@ -38,7 +38,7 @@
 @import "modules/main-content";
 @import "modules/feed";
 @import "modules/containers";
-@import "modules/content-index";
+@import "modules/contents-page";
 @import "modules/main-nav";
 @import "modules/page-info";
 @import "modules/breadcrumb";
