--- a/libs/template/sidebar-styles.jade
+++ b/libs/template/sidebar-styles.jade
@@ -4,8 +4,8 @@
 	{title: "Colours", href: "colours.html"},
 	{title: "Icons", href: "icons.html"},
 	{title: "Tables", href: "tables.html"},
+	//{title: "Grid", href: "new-grid.html"},
 	{title: "Buttons", href: "buttons.html"},
 	{title: "Fields", href: "fields.html"},
-	{title: "Field groups", href: "field-groups.html"},
-	{title: "Grid", href: "new-grid.html"}
+	{title: "Field groups", href: "field-groups.html"}
 ])
