Line height fixes for icon pages

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1054,10 +1054,14 @@ div.tooltip:before {
 .iconlist {
     .icon {
         .icon;
+        line-height: @line-height-base;
+        text-align: center;
     }
     .icon-brand {
         .icon;
+        line-height: @line-height-base;
         font-family: 'brand' !important;
+        text-align: center;
     }
 
     .variable,
